<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_baby_profiles"
        android:orderInCategory="80"
        android:title="@string/action_baby_profiles"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_manage_group"
        android:orderInCategory="90"
        android:title="@string/action_manage_subscribe"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add"
        android:orderInCategory="80"
        android:icon="@drawable/action_add"
        android:title="@string/action_add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_save"
        android:orderInCategory="80"
        android:icon="@drawable/action_done"
        android:title="@string/action_save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="80"
        android:icon="@drawable/action_delete"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom" />
</menu>
