<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/diaper_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/cd_sleeping"
        android:background="@color/colorAccentLight">

        <include layout="@layout/date_time" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:layout_marginEnd="@dimen/margin_medium"
            android:text="@string/text_sleeping_to" />
        <EditText
            android:id="@+id/sleep_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="start|center_vertical"
            android:layout_margin="@dimen/margin_small"
            android:paddingTop="@dimen/padding_text"
            android:paddingBottom="@dimen/padding_text"
            android:paddingStart="@dimen/padding_text_wide"
            android:paddingEnd="@dimen/padding_text_wider"
            android:background="@drawable/time_bg"
            android:textColor="@color/colorAccentLight"
            android:contentDescription="@string/cd_sleeping_end_time"
            android:hint="@string/text_time" />

        <Spinner
            android:id="@+id/sleep_place"
            android:layout_width="@dimen/spinner_width_sleeping"
            android:layout_height="@dimen/spinner_height"
            android:dropDownWidth="@dimen/dropdown_width_sleeping"
            android:ellipsize="marquee"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_gravity="center"
            android:gravity="start|center_vertical"
            android:background="@drawable/spinner_bg"
            android:popupBackground="@color/colorAccent"
            android:paddingTop="@dimen/padding_spinner"
            android:paddingBottom="@dimen/padding_spinner"
            android:paddingStart="@dimen/padding_spinner_start"
            android:paddingEnd="@dimen/padding_spinner_wide"
            android:contentDescription="@string/cd_sleeping_where"
            android:entries="@array/spinner_sleep_where"
            android:prompt="@string/text_sleeping_where" />


        <TextView
            android:id="@+id/sleep_duration"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/edittext_height"
            android:layout_gravity="center|top"
            android:gravity="center|top"
            android:layout_marginBottom="@dimen/margin_medium"
            android:paddingStart="@dimen/padding_text_wider"
            android:paddingEnd="@dimen/padding_text_wider"
            android:inputType="number"
            android:contentDescription="@string/cd_sleeping_duration"
            android:hint="@string/text_sleeping_duration" />

        <include layout="@layout/notes" />

    </LinearLayout>
</ScrollView>