<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/feeding_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/cd_feeding"
        android:background="@color/colorAccentLight">

        <include layout="@layout/date_time" />

        <Spinner
            android:id="@+id/feeding_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dropDownWidth="wrap_content"
            android:ellipsize="marquee"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_gravity="center"
            android:gravity="start|center_vertical"
            android:background="@drawable/spinner_bg"
            android:popupBackground="@color/colorAccent"
            android:paddingTop="@dimen/padding_spinner"
            android:paddingBottom="@dimen/padding_spinner"
            android:paddingStart="@dimen/padding_spinner"
            android:paddingEnd="@dimen/padding_spinner_wide"
            android:contentDescription="@string/cd_feeding_type"
            android:entries="@array/spinner_feeding_type"
            android:spinnerMode="dropdown"
            android:prompt="@string/text_feeding_type" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_medium">

            <EditText
                android:id="@+id/feeding_quantity"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="start"
                android:gravity="center"
                android:paddingStart="@dimen/padding_text"
                android:paddingEnd="@dimen/padding_text"
                android:inputType="number"
                android:maxLines="1"
                android:contentDescription="@string/cd_feeding_qty"
                android:hint="@string/text_feeding_qty" />

            <Spinner
                android:id="@+id/feeding_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:dropDownWidth="128dp"
                android:gravity="center"
                android:background="@drawable/spinner_bg"
                android:popupBackground="@color/colorAccent"
                android:paddingTop="@dimen/padding_spinner"
                android:paddingBottom="@dimen/padding_spinner"
                android:paddingStart="@dimen/padding_spinner"
                android:paddingEnd="@dimen/padding_spinner_wide"
                android:contentDescription="@string/cd_feeding_unit"
                android:entries="@array/spinner_feeding_unit_nursing"
                android:spinnerMode="dropdown"
                android:prompt="@string/text_feeding_unit" />

        </LinearLayout>
        <include layout="@layout/notes" />

    </LinearLayout>
</ScrollView>